--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-language: python
-python: 3.8
+language: minimal
 install:
   # Set up Conda
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
