Correct debug code

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ install:
   - npm install -g hexo-cli
   - npm install
 before_script:
-  - ll  # debug
+  - ls -al  # debug
   - python build/build.py
 script:
   - hexo generate
