--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
 language: minimal
+branches:
+  only:
+  - master
 install:
   # Set up Conda
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
