Add additional debug to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ install:
   - npm install -g hexo-cli
   - npm install
 before_script:
-  - ls -al  # debug
+  - ls -alR  # debug
   - python build/build.py
 script:
   - hexo generate
