Correct travis formatting

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ branches:
 services:
   - docker
 before_install:
-  - docker pull jupyter/scipy-notebook jupyter/r-notebook
+  - docker pull jupyter/scipy-notebook
+  - docker pull jupyter/r-notebook
 install:
   # Set up Conda
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
