--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ branches:
   - main
 services:
   - docker
+before_install:
+  - chmod -C 777 .
 install:
   # Set up Conda
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
