--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ branches:
 services:
   - docker
 before_install:
-  - chmod -C 777 .
+  - chmod -R 777 .
 install:
   # Set up Conda
   - wget https://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh;
