--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,13 @@ before_script:
   - python build/build.py
 script:
   - hexo generate
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GH_TOKEN
+  keep-history: true
+  on:
+    branch: deploy
+  local-dir: public
+  fqdn: dev.research.wdss.io
 
