Switch deploy to main branch

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ deploy:
   github-token: $GH_TOKEN
   keep-history: true
   on:
-    branch: deploy
+    branch: main
   local-dir: public
   fqdn: dev.research.wdss.io
 
